k8s/backend/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: story-stream
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: tatarjesus/story-stream-backend:latest
          resources:
            requests:
              cpu: '100m'
            limits:
              cpu: '500m'
          ports:
            - containerPort: 8810
