k8s/backend/backend.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: story-stream
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.music-demo.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-services
                port:
                  number: 8810
